fixed font color in dark mode in firefox

--- a/css/blog.css
+++ b/css/blog.css
@@ -26,7 +26,7 @@
 }
 
 .linkContainer>* {
-    color: initial;
+    color: var(--text);
 }
 
 .linkImage {
