--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@
     border-radius: 1vh;
     padding: 1rem;
     transition: margin 0.1s;
-    color: initial;
+    color: var(--text);
     text-decoration: none;
 }
 
