--- a/css/links.css
+++ b/css/links.css
@@ -19,7 +19,7 @@
     margin: 2vh;
     border-radius: 1vh;
     padding: 1rem;
-    color: initial;
+    color: var(--text);
     text-decoration: none;
     transition: margin 0.1s;
     white-space: nowrap;
